--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ a {
       top: 0px;
       right: 0px;
       z-index: 2;
-      max-width: 780px;
+      max-width: 100%;
       left: -20px; }
       @media (min-width: 768px) {
         .hero .hero-img-wrap img {
